--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,8 +9,10 @@
     <string name="change_password">Change Password</string>
     <string name="send_password_reset_email">Send Password reset email</string>
     <string name="remove_user">Remove user</string>
+    <string name="storage">Storage</string>
     <string name="upload_images">Upload Images</string>
     <string name="upload_video">Upload Videos</string>
+    <string name="show_images">Show Images</string>
     <string name="new_pass">New Password</string>
     <string name="title_activity_profile">Firebase</string>
     <string name="title_activity_login">Sign in</string>
